buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.2.5.RELEASE"
    }
}

apply plugin: "java"
apply plugin: "eclipse"
apply plugin: "idea"
apply plugin: "spring-boot"

//sourceSets.main.java.srcDirs = ["src"]

jar {
    baseName = "api-compare-tool"
    version =  "0.1.0"
}

repositories {
    mavenCentral()
    maven {
        url "http://nexus.prod.hulu.com/content/repositories/releases"
    }
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
    compile("com.fasterxml.jackson.core:jackson-core:2.6.0")
    compile("com.hulu:hulu-sso-java:2.0.6")
    compile("dom4j:dom4j:1.6.1")
    compile("mysql:mysql-connector-java:5.1.36")
    compile("org.apache.commons:commons-lang3:3.3.1")
    compile("org.apache.httpcomponents:httpasyncclient:4.1")
    compile("org.apache.httpcomponents:httpcore:4.4.1")
    compile("org.apache.httpcomponents:httpcore-nio:4.4.1")
    compile("org.springframework.boot:spring-boot-starter-web")
    compile("org.springframework:spring-jdbc")
    testCompile("junit:junit")
}

task wrapper(type: Wrapper) {
    gradleVersion = "2.5"
}